# ai-notes-api

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 06e011c77292_remove_rag_query_tables.py  239f767ca4fd_add_document_chunk_table.py  25738b9e6c8c_create_chat_sessions_and_messages_tables.py  2dbf51959f89_add_user_id_to_notes.py  3dd76b22c38f_create_notes_table.py  3e83b1260f95_fix_tables_relations.py  43fa57f47c29_create_generation_jobs_table.py  45387e4ce52c_create_chat_memories_table.py  46a0a0e001c3_create_users_table.py  48add2a2bda8_add_document_processing_jobs_table.py  5c4081c49d7e_remove_default_none.py  617d7be6fd51_add_rag_queries_table.py  683f77be6a55_add_documents_table.py  692926ebb7e2_connect_users_table_to_documents.py  722ede82be97_enable_pgvector_extension.py  791080acc188_add_is_summarizing_column_in_chat_.py  89a8d53bd0e8_add_processed_at_column_in_documents.py  93228745b965_add_last_summarized_message_id_column_.py  a6ca0638c302_add_chat_generation_lock_fields.py  cbd6b304f6dd_check.py  e495a670b858_add_rag_query_sources_table.py  e6da6d257f19_recreate_tables_with_uuid_ids.py  eb5d9d8045d6_add_soft_delete_to_messages.py
docker/: entrypoint.sh
src/ai_notes_api/: main.py
src/ai_notes_api/core/: __init__.py  config.py  logger.py  security.py
src/ai_notes_api/db/: session.py
src/ai_notes_api/exceptions/: __init__.py  base.py  chat_memory.py  chat_session.py  document.py  document_processing.py  document_processing_job.py  generation_job.py  message.py  note.py  token.py  user.py
src/ai_notes_api/ingestion/: __init__.py  chunking.py  schemas.py  text_extractor.py
src/ai_notes_api/integrations/: __init__.py  openai.py
src/ai_notes_api/llm/: __init__.py  base.py  client.py  embeddings.py  models.py  prompt_builder.py  tools.py
src/ai_notes_api/memory/: __init__.py  extractor.py  prompt_builder.py  prompts.py  summarizer.py
src/ai_notes_api/rag/: __init__.py  prompt_builder.py
src/ai_notes_api/repositories/: __init__.py  base.py  chat_memory.py  chat_session.py  document.py  (+9 more)
tests/: conftest.py  test_config.py  test_healthcheck.py  test_logger.py
tests/api/: test_auth_route.py  test_chat_route.py  test_completions_route.py  test_documents_route.py  test_generation_jobs_route.py  test_healthcheck_endpoint.py  test_memory_route.py  test_message_route.py  test_note_route.py  test_session_route.py
tests/llm/: test__openai_client.py  test_openai_client.py  test_openai_embeddings.py
tests/memory/: test_extractor.py  test_prompt_builder.py  test_summarizer.py
tests/rag/: test_rag_prompt_builder.py
tests/repositories/: test_chat_memory_repository.py  test_chat_session_repository.py  test_document_chunk_repository.py  test_document_processing_job_repository.py  test_document_repository.py  test_generation_job_repository.py  test_message_repository.py  test_note_repository.py  test_rag_query_repository.py  test_rag_query_source_repository.py  test_user_repository.py
tests/services/: test_auth_service.py  test_chat_memory_service.py  test_chat_session_service.py  test_document_chunk_service.py  test_document_processing_job_service.py  test_document_service.py  test_generation_job_service.py  test_llm_context.py  test_llm_service.py  test_message_service.py  test_note_service.py
tests/tools/: test_create_note.py  test_delete_note.py  test_factory.py  test_get_note.py  test_models.py  test_registry.py  test_search_notes.py  test_update_note.py
(+83 files in other folders)
