[project]
name = "ai_notes_api"
version = "0.4.0"
description = "AI Note's API"
authors = [{ name = "NKTKLN", email = "nktkln@nktkln.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "greenlet>=3.5.1",
    "loguru>=0.7.3",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
    "python-jose>=3.5.0",
    "passlib>=1.7.4",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.32",
    "openai>=2.41.1",
    "sse-starlette>=3.4.4",
    "celery>=5.6.3",
    "redis>=8.0.0",
    "pgvector>=0.4.2",
    "aioboto3>=15.5.0",
    "tiktoken>=0.13.0",
    "markitdown[all]>=0.1.6",
]

[dependency-groups]
dev = [
  "ruff>=0.15.1",
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "coverage>=7.13.4",
  "pip-audit>=2.10.0",
  "deptry>=0.24.0",
  "commitizen>=4.13.7",
  "httpx>=0.28.1",
  "pytest-asyncio>=1.4.0",
  "aiosqlite>=0.22.1",
  "types-python-jose>=3.5.0.20260408",
  "types-passlib>=1.7.7.20260211",
]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.uv]
prerelease = "if-necessary-or-explicit"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_notes_api"]

[tool.hatch.build.targets.sdist]
include = ["src/ai_notes_api", "README.md", "pyproject.toml"]

[tool.hatch.build]
exclude = [
  "/.github",
  "/.venv",
  "/tmp",
  "/dist",
  "/build",
  "**/__pycache__",
  "**/*.pyc",
]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-include = ["*.ipynb"]
exclude = [".git", "__pycache__", "build", "dist", ".venv", "tmp", "alembic"]

[[tool.mypy.overrides]]
module = ["celery.*", "aioboto3.*", "botocore.*"]
ignore_missing_imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "D", "B", "B9", "C90", "S", "UP", "SIM", "TRY", "PL", "ARG", "PTH"]
ignore = ["E203", "D100"]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101", "D", "PLR2004"]  # assert, docstrings, magic values in tests
"**/*.ipynb" = ["T201"]                   # print

[tool.mypy]
mypy_path = ["src"]
files = ["src", "tests"]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
pretty = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
strict_optional = true
disallow_untyped_calls = true
exclude = [".git", "__pycache__", "build", "dist", ".venv", "tmp", "alembic"]

[tool.coverage.run]
branch = true
source = ["ai_notes_api"]
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.deptry]
known_first_party = ["ai_notes_api"]

[tool.deptry.per_rule_ignores]
DEP002 = ["uvicorn", "asyncpg", "greenlet", "bcrypt", "python-multipart", "redis"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
